# qt

Graphics_Viewer/: CMakeLists.txt  mainwindow.h  mainwindow.ui
ImageViewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
ch3/: cvplugininterface.h
ch3/build-median_filter_plugin-Qt_5_12_10_clang_64-Debug/: Makefile  moc_median_filter_plugin.cpp
ch3/build-median_filter_plugin-Qt_5_12_10_clang_64-Debug/median_filter_plugin.app/Contents/: Info.plist
ch3/median_filter_plugin/: cvplugininterface.h  median_filter_plugin.cpp  median_filter_plugin.h  median_filter_plugin.pro
first/: CMakeLists.txt  first_zh_CN.ts  mainwindow.h  mainwindow.ui
first2/: first2.pro  mainwindow.cpp  mainwindow.ui
hello/: CMakeLists.txt
